--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
 </head>
 <body>
     <div id="buttons">
-        <button id="bashScript1" data-script="find" class="macktez-button">Script 1</button>
-        <button id="bashScript2" data-script="top" class="macktez-button">Script 2</button>
-        <button id="bashScript3" data-script="iostat" class="macktez-button">Script 3</button>
+        <button id="getEDL" data-script="top" class="macktez-button">Get EDL</button>
+        <button id="setBasePath" data-script="find" class="macktez-button">Set Base</button>
+        <button id="getSource" data-script="iostat" class="macktez-button">Set Source</button>
+        <button id="getDestination" data-script="iostat" class="macktez-button">Set Destination</button>
     </div>
     <div id="container1">
         <pre id="bashOutput1" class="indentText"></pre>
     </div>
-    <div id="container2">
-        <pre id="bashOutput2" class="indentText"></pre>
-    </div>
-    <div id="container3">
-        <pre id="bashOutput3" class="indentText"></pre>
-    </div>
+    
     <div id="testContainer">
         <p id="debugMessages">hard</p>
     </div>
