--- a/index.html
+++ b/index.html
@@ -2,64 +2,62 @@
 <html lang="en">
 
 <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-    <link href="./node_modules/photonkit/dist/css/photon.css" rel="stylesheet">
-    <link href="./public/css/styles.css" rel="stylesheet">
-    <script>
-        var $ = jQuery = require('jquery')
-    </script>
+	<title></title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+	<link href="./public/css/photon.css" rel="stylesheet">
+	<link href="./public/css/styles.css" rel="stylesheet">
+	<script>
+		var $ = jQuery = require('jquery')
+</script>
 </head>
 
 <body>
-    <div class="window">
-        <div class="window-content">
-            <div class="pane-group">
-                <div class="pane-mini sidebar">
-                    <div id="buttons">
-                        <button id="setBasePath" class="btn btn-large btn-default eta-button">Set Base</button>
-                        <button id="getEDL" class="btn btn-large btn-default eta-button">Get EDL</button>
-                        <button id="getSource" class="btn btn-large btn-default eta-button">Set Source</button>
-                        <button id="getDestination" class="btn btn-large btn-default eta-button">Set Destination</button>
-                        <br>
-                        <br>
-                        <button id="runScript" class="btn btn-large btn-default eta-button">Start Copy</button>
-                    </div>
-                </div>
-                <div class="pane">
-                    <div id="feedback">
-                        <table>
-                            <tr>
-                                <th>Base Path</th>
-                                <th>EDL</th>
-                                <th>Soruce Path</th>
-                                <th>Destination Path</th>
-                            </tr>
-                            <tr>
-                                <td id="basePath">...</td>
-                                <td id="EDL">...</td>
-                                <td id="srcPath">...</td>
-                                <td id="destPath">...</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div id="container1">
-                        <pre id="bashOutput1"></pre>
-                    </div>
+	<div class="window">
+		<div class="window-content">
+			<div class="pane-group">
+				<div class="pane-mini sidebar">
+					<div id="buttons">
+						<button id="setBasePath" class="btn btn-large btn-default eta-button">Set Base</button>
+						<button id="getEDL" class="btn btn-large btn-default eta-button">Get EDL</button>
+						<button id="getSource" class="btn btn-large btn-default eta-button">Set Source</button>
+						<button id="getDestination" class="btn btn-large btn-default eta-button">Set Destination</button>
+						<br>
+						<br>
+						<button id="runScript" class="btn btn-large btn-default eta-button">Start Copy</button>
+					</div>
+				</div>
+				<div class="pane">
+					<div id="feedback">
+						<table>
+							<tr>
+								<th>Base Path</th>
+								<th>EDL</th>
+								<th>Soruce Path</th>
+								<th>Destination Path</th>
+							</tr>
+							<tr>
+								<td id="basePath">...</td>
+								<td id="EDL">...</td>
+								<td id="srcPath">...</td>
+								<td id="destPath">...</td>
+							</tr>
+						</table>
+					</div>
+					<div id="container1">
+						<pre id="bashOutput1"></pre>
+					</div>
 
-                    <div id="testContainer">
-                        <p id="debugMessages">hard</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script>
-        require('./scripts/renderer')
-    </script>
+					<div id="testContainer">
+						<p id="debugMessages"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<script>
+		require('./scripts/renderer')
+	</script>
 </body>
 
 </html>
