--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<link href="./public/css/photon.css" rel="stylesheet">
+	<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
 	<link href="./public/css/styles.css" rel="stylesheet">
 	<script>
 		var $ = jQuery = require('jquery')
 </script>
+<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -18,13 +20,13 @@
 			<div class="pane-group">
 				<div class="pane-mini sidebar">
 					<div id="buttons">
-						<button id="setBasePath" class="btn btn-large btn-default eta-button">Set Base</button>
-						<button id="getEDL" class="btn btn-large btn-default eta-button">Get EDL</button>
-						<button id="getSource" class="btn btn-large btn-default eta-button">Set Source</button>
-						<button id="getDestination" class="btn btn-large btn-default eta-button">Set Destination</button>
+						<button id="setBasePath" class="btn btn-large btn-dark eta-button">Set Base</button>
+						<button id="getEDL" class="btn btn-large btn-dark eta-button">Get EDL</button>
+						<button id="getSource" class="btn btn-large btn-dark eta-button">Set Source</button>
+						<button id="getDestination" class="btn btn-large btn-dark eta-button">Set Destination</button>
 						<br>
 						<br>
-						<button id="runScript" class="btn btn-large btn-default eta-button">Start Copy</button>
+						<button id="runScript" class="btn btn-large btn-dark eta-button">Start Copy</button>
 					</div>
 				</div>
 				<div class="pane">
